1998-11-05  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/holding.h: rename dir_list to holding_list because
	dir_list is also declared in amflush.c
	* server-src/holding.c: ditto
	* server-src/find.c: ditto

1998-11-05  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: remove warning.

1998-11-04  John R. Jackson  <jrj@purdue.edu>

	* server-src/amverify.sh.in: tolerate extra amtape output.

1998-11-04  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* configure.in: bumped to 2.5.0

	* server-src/taper.c (read_file): if a new tape cannot be found,
 	report a no-tape error to the log file and exit, just like it does
 	for the first tape

1998-11-03  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/planner.c (pick_inclevel): return base_level even
	when the estimate failed.
	* server-src/planner.c (output_scheduleline): test for degr_size
	instead of degr_level.

1998-11-03  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/planner.c (last_level): update last_date otherwise only
	level 0 or the highest is returned.

1998-11-03  Mike Grupenhoff  <kashmir@munge.com>

	* common-src/alloc.c: const arguments to the stralloc functions
	* common-src/amanda.h: update stralloc prototypes for const
	poisoning

1998-11-03  John R. Jackson  <jrj@purdue.edu>

	* server-src/dumper.c (do_dump): do not report FAILED back to driver
	when it sent us ABORT.  Clean up and send back ABORT-FINISHED.

1998-11-03  John R. Jackson  <jrj@purdue.edu>

	* server-src/driver.c (handle_dumper_result): do not abort a dumper
	that reports NO-ROOM if taper is busy since some holding disk space
	will eventually be released (this code it not used when PORT-DUMP is
	in progress).

1998-11-03  John R. Jackson  <jrj@purdue.edu>

	* server-src/taper.c (write_buffer): calling lseek after every tape
	write is wasteful and makes utilities like lsof less useful.  Only