@@ -1,5 +1,10 @@
 1998-11-05  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
+	* server-src/amindexd.c (build_disk_table): call find_dump() instead
+	of popen("amadmin <conf> find ...")
+
+1998-11-05  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
 	* server-src/holding.h: rename dir_list to holding_list because
 	dir_list is also declared in amflush.c
 	* server-src/holding.c: ditto
